--- a/TemplateProject/TemplateProject/EditWindow.xaml
+++ b/TemplateProject/TemplateProject/EditWindow.xaml
@@ -6,7 +6,23 @@
         xmlns:local="clr-namespace:TemplateProject"
         mc:Ignorable="d"
         Title="EditWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Label Content="Name:" Grid.Row="0"/>
+        <TextBox Name="NameInput" Grid.Row="0" Width="200" Margin="80,0,0,10"/>
+
+        <Label Content="Age:" Grid.Row="1"/>
+        <TextBox Name="AgeInput" Grid.Row="1" Width="200" Margin="80,0,0,10"/>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="Save" Width="80" Click="SaveButton_Click" Margin="5"/>
+            <Button Content="Cancel" Width="80" Click="CancelButton_Click" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Window>
